crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_scatter_mode_identities.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: identities
---
[
    (
        "Assign",
        "0",
    ),
    (
        "Add",
        "0",
    ),
    (
        "Max",
        "-inf",
    ),
    (
        "Min",
        "inf",
    ),
]
