crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_scatter_reduce_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: variants
---
[
    Assign,
    Add,
    Max,
    Min,
    Mul,
]
