crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_shaped_reduction_config_axis1_keepdim.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: config
---
ShapedReductionConfig {
    op: Mean,
    axis: Some(
        1,
    ),
    keepdim: true,
}
