crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_shaped_reduction_config_global.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: config
---
ShapedReductionConfig {
    op: L2Norm,
    axis: None,
    keepdim: false,
}
