crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_support_level_display_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: variants
---
[
    "Full (95%)",
    "Partial (no FP16 accumulate)",
    "Emulated",
    "Unsupported",
]
